- Rector cancelSharing method to PUT. - pom.xml works for javafx:run - not for javafx:jlink. - not for mvn package.